# fuel-price-radar

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  crontab  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 7285282274d2_initial_schema.py
notebooks/: report.ipynb
sql/marts/: mart_price_history.sql  mart_regional_spread.sql  mart_spain_vs_eu.sql
src/pipeline/: cli.py  load.py  site.py
src/pipeline/collectors/: base.py  eu_bulletin.py  fuel_es.py
src/pipeline/db/: models.py  session.py
tests/: conftest.py  test_base.py  test_eu_bulletin.py  test_fuel_es.py  test_load.py  test_marts.py  test_migrations.py
tests/fixtures/: eu_bulletin_history_sample.xlsx  eu_bulletin_page.html  fuel_es_sample.json
